--- a/arch/arm64/Kconfig
+++ b/arch/arm64/Kconfig
@@ -1490,6 +1490,12 @@ config MACH_XIAOMI_CEPHEUS
         help
           Support for Xiaomi MI 9
 
+config MACH_XIAOMI_RAPHAEL
+        bool "polaris board"
+        select MACH_XIAOMI_SM8150
+        help
+          Support for Xiaomi K20 Pro
+
 endmenu
 
 endmenu
